--- a/masaiPartners.html
+++ b/masaiPartners.html
@@ -65,6 +65,7 @@
     </style>
 </head>
 <body>
+    <!-- This WebPage is made using Grid -->
     <div class="container">
         <h2>Have a Dream Company In Mind?</h3>
         <h1>Meet Our 700+ Hiring Partners</h1>
